css/main.css
/* ... */
.fa-youtube-square:before {
  content: "\f431";
}

.fa-zhihu:before {
  content: "\f63f";
}

.sr-only {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.sr-only-focusable:active, .sr-only-focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  width: auto;
}

/*!
 * Font Awesome Free 5.12.1 by @fontawesome - https://fontawesome.com
 * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
 */
@font-face {
  font-family: "Font Awesome 5 Brands";
  font-style: normal;
  font-weight: 400;
  font-display: auto;
  src: url("../webfonts/fa-brands-400.eot");
  src: url("../webfonts/fa-brands-400.eot?#iefix") format("embedded-opentype"), url("../webfonts/fa-brands-400.woff2") format("woff2"), url("../webfonts/fa-brands-400.woff") format("woff"), url("../webfonts/fa-brands-400.ttf") format("truetype"), url("../webfonts/fa-brands-400.svg#fontawesome") format("svg");
}

.fab {
  font-family: "Font Awesome 5 Brands";
  font-weight: 400;
}

/* ========== GLOBAL ========== */
* {
  margin: 0;
  padding: 0;
  border: 0;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  font-weight: normal;
}

html {
  font-size: 62.5%;
  scroll-behavior: smooth;
}

body {
  font-family: "Work Sans", sans-serif;
  color: #c2c2c2;
  background-color: #1a1a1a;
  overflow-x: hidden;
}

::-moz-selection {
  color: black;
  background-color: #ff7700;
}

::selection {
  color: black;
  background-color: #ff7700;
}

.primary {
  color: #ff7700;
}

/* ========== GENERAL ========== */
.container {
  width: 100%;
  max-width: 1400px;
  margin: 0 auto;
  padding: 0 20px;
}

section {
  scroll-margin-top: 15rem;
}

section:not(.gallery-section) {
  margin-bottom: 8rem;
}

.grid {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: (1fr)[3];
      grid-template-columns: repeat(3, 1fr);
  grid-gap: 2.4rem;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

/* ========== TYPOGRAPHY ========== */
h1 {
  font-family: "Teko";
  font-size: 9.6rem;
  letter-spacing: 1rem;
}

h2 {
  font-family: "Teko";
  font-size: 6.4rem;
  color: white;
  margin-bottom: 4rem;
}

h2 .heading__faded {
  color: #474747;
}

h3 {
  font-family: "Teko";
  font-size: 4.8rem;
}

p {
  font-size: 1.8rem;
  line-height: 1.3;
}

p:not(:last-of-type) {
  margin-bottom: 1.6rem;
}

a {
  position: relative;
  color: #ff7700;
  font-size: 1.8rem;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

a.link--hover::before {
  content: "";
  position: absolute;
  height: 0.2rem;
  background-color: currentColor;
  left: 0;
  right: 100%;
  bottom: -0.4rem;
  -webkit-transition: right 0.2s;
  transition: right 0.2s;
}

a.link--hover:hover::before {
  right: 0;
}

.material-icons {
  font-size: 1.4em;
  margin-right: 0.4em;
}

/* ========== BUTTON ========== */
.button {
  position: relative;
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  color: white;
  background-color: #474747;
  padding: 1.6rem 3.2rem;
  font-size: 1.6rem;
  font-weight: bold;
  text-decoration: none;
  -webkit-clip-path: polygon(0 0, 100% 0, 100% calc(100% - 1.2rem), calc(100% - 1.2rem) 100%, 0 100%);
          clip-path: polygon(0 0, 100% 0, 100% calc(100% - 1.2rem), calc(100% - 1.2rem) 100%, 0 100%);
  margin-right: 2.4rem;
  -webkit-transition: 0.2s;
  transition: 0.2s;
}

.button::before {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #474747;
  -webkit-clip-path: polygon(0 0, 100% 0, 100% calc(100% - 1.2rem), calc(100% - 1.2rem) 100%, 0 100%, 0 0.3rem, 0.3rem 0.3rem, 0.3rem calc(100% - 0.3rem), calc(100% - 1.4rem) calc(100% - 0.3rem), calc(100% - 0.3rem) calc(100% - 1.4rem), calc(100% - 0.3rem) 0.3rem, 0 0.3rem);
          clip-path: polygon(0 0, 100% 0, 100% calc(100% - 1.2rem), calc(100% - 1.2rem) 100%, 0 100%, 0 0.3rem, 0.3rem 0.3rem, 0.3rem calc(100% - 0.3rem), calc(100% - 1.4rem) calc(100% - 0.3rem), calc(100% - 0.3rem) calc(100% - 1.4rem), calc(100% - 0.3rem) 0.3rem, 0 0.3rem);
  opacity: 0;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.button--primary {
  color: black;
  background-color: #ff7700;
}

.button--outlined {
  color: white;
  background-color: transparent;
}

.button--outlined::before {
  opacity: 1;
}

.button--outlined.button--primary::before {
  background-color: #ff7700;
}

.button--small {
  font-size: 1.1rem;
  padding: 1.1rem 2.4rem;
  margin-right: 1.6rem;
}

/* ========== PLATFORMS ========== */
.platforms {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
}

.platforms__item {
  opacity: 0.7;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.platforms__item:not(:last-child) {
  margin-right: 1.6rem;
}

.platforms__item:hover {
  opacity: 1;
}

.platforms__link {
  color: white;
}

/* ========== ANIMATED OVERLAY ========== */
.overlay {
  position: fixed;
  width: 100%;
  height: 100%;
  z-index: 2;
}

.overlay__top, .overlay__bottom {
  background-color: black;
  width: 100%;
  height: 50%;
}

.overlay__logo {
  position: absolute;
  left: 50%;
  -webkit-transform: translateX(-50%);
          transform: translateX(-50%);
  width: 16rem;
}

.overlay__logo--top {
  bottom: 0;
}

.overlay__logo--bottom {
  top: 0;
}
/* ... */

